# kuhni_marina_backend

./: README.md  alembic.ini  bd_config.md  create_tables.sql  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_texts_table.py  527b8c2bcc8c_create_temp_codes_table.py  c6ba697a11dd_fix_datetime_timezone_issue.py
api/: deps.py
api/v1/: routers.py
api/v1/endpoints/: attributes.py  auth.py  banners.py  categories.py  measure_requests.py
core/: config.py
core/models/: __init__.py  attributes.py  banners.py  categories.py  db_helper.py  measure_requests.py  product_attributes.py  product_images.py  products.py  project_images.py  project_products.py  projects.py  reviews.py  users.py
core/schemas/: __init__.py  attributes.py  auth.py  banners.py  base.py  categories.py  measure_requests.py
core/utils/: slug.py
db/: session.py
repositories/: attributes.py  auth.py  banners.py  categories.py  measure_requests.py
services/: attributes.py  auth.py  banners.py  categories.py  measure_requests.py
